# LUMINA

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_CN.md  add_license.py  cli.py  docker-compose.yml  docker-entrypoint.sh  lumina_cli.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/v1/: admin.py  health.py  licenses.py
app/core/: config.py  i18n.py  logging.py  security.py
app/models/: schemas.py
app/services/: auth_service.py  license_service.py
app/storage/: base.py  factory.py  json_storage.py  mysql_storage.py  sqlite_storage.py
app/utils/: helpers.py  key_generator.py  validators.py
config/: config.yaml  config.yaml.example  licenses.example.json
data/: config.yaml  config.yaml.backup
docs/: API_PROTOCOL.md  AUTO-CONFIG.md  CLIENT_CONFIG_TEMPLATE.json  CONFIG.md  openapi.yaml
examples/: client_example.py
tests/: test_api.py  test_storage.py
tools/: migrate_to_db.py
